# dlms-cosem

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_TODO.md  FULL_TEST_REPORT.md  LICENSE  NEW_IC_CLASSES_SUMMARY.md  README.md  RELEASE_NOTES.md  generate_missing_classes.py  mkdocs.yml  mypy.ini  pyproject.toml  rename_ic_classes.py  rename_script.py  run_tests.ps1
.claude/: settings.local.json
devscripts/: read_data_into_csv.py
dlms_cosem/: __init__.py  a_xdr.py  analytics.py  async_client.py  async_io.py  automation.py  ber.py  block_transfer.py  cli_args.py  client.py  connection.py  constants.py  crc.py  data_notification_handler.py  dlms_data.py  enumerations.py  exceptions.py  io.py  operation_mode.py  parsers.py  security.py  server.py  state.py  time.py  utils.py  wport.py  ws_gateway.py
docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  HLS_ADVANCED_GUIDE.md  HLS_TEST_REPORT.md  HLS_USAGE_GUIDE.md  IMPLEMENTATION_STATUS.md  METER_CONNECTION_GUIDE.md  METER_TESTING_GUIDE.md  METER_TEST_REPORT.md  MULTI_PROJECT_AMR_GUIDE.md  NEW_MODULES_GUIDE.md  REAL_METER_VERIFICATION.md  SECURITY_TESTING_GUIDE.md  UNIMPLEMENTED_FEATURES.md  api_client.md  api_reference.md  api_server.md  api_transport.md  contributing.md  design_principles.md  error_audit.md  error_codes.md  examples.md  key_management.md  migration_1_0.md  release_process.md  security_suites.md  troubleshooting.md  type_fixes_log.md  type_system_plan.md
examples/: analytics_example.py  associations_list.py  automation_example.py  data_notification_handler.py  dlms_with_hdlc_example.py  dlms_with_tcp_example.py  env_config_example.py  exception_handling.py  hdlc_parameter_negotiation.py  layered_config_example.py  meter_simulation.py  multi_project_amr_system.py  profile_generic_read_methods.py  server_three_phase.py  ws_gateway_example.py
scripts/: dlms-keys  meter_functional_test.py  try_ports.py
tests/: TEST_VALIDATION_SUMMARY.md  conftest.py  test_analytics.py  test_async_client.py  test_automation.py  test_axdr_supplementary.py  test_axdr_unknown_tags.py  test_block_transfer.py  test_blocking_tcp_transport.py  test_bluebook_ed16_ic_classes.py  test_bugfixes.py  test_certificate.py  test_china_gb.py  test_connection_security.py  test_constants.py  test_cosem_completeness.py  test_cosem_ic_classes.py  test_cosem_interface_classes.py  test_cosem_supplementary.py  test_dlms_connection.py  test_dlms_data.py  test_dlms_data_supplementary.py  test_e2e_integration.py  test_enumerations_supplementary.py  test_exceptions.py  test_exceptions_supplementary.py  test_factory.py  test_fep_transport.py  test_fuzzing.py  test_general_global_cipher.py  test_hdlc_parameters_green_book.py  test_hdlc_practical.py  test_hdlc_security.py  test_hdlc_supplementary.py  test_hdlc_supplementary_v2.py  test_hls_complete.py  test_hls_connection_live.py  test_hls_ism.py  (+28 more)
(+341 files in other folders)
